--- a/html/profile.html
+++ b/html/profile.html
@@ -13,7 +13,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous" />
     <script src="../javascript/script.js"></script>
-    <title>Transaction History</title>
+    <title>Profile</title>
     <style>
       body {
         font-family: "Montserrat", sans-serif;
@@ -505,6 +505,8 @@
         </div>
       </div>
     </div>
+
+    <h1 class="container mt-5">Transaction History</h1>
 
     <div class="transaction-history">
       <table>
