--- a/html/signup.html
+++ b/html/signup.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sign Up Page</title>
+		<link
+		rel="shortcut icon"
+		href="https://storage.googleapis.com/platform-webstore-rel-assets/pgo/site_assets/favicon.ico"
+		/>
 		<link rel="stylesheet" href="../css/styleslog.css" />
 		<script src="../javascript/script.js"></script>
 		<style>
