Update mainstore.html - linked the button to cart page

--- a/html/mainstore.html
+++ b/html/mainstore.html
@@ -1124,7 +1124,7 @@
 		<div
 			class="floating-cart-button"
 			id="floatingCartButton"
-			onclick="window.location.href='test.html'"
+			onclick="window.location.href='cart.html'"
 		>
 			<span id="badge">0</span>
 			<img src="../assets/LOGO/game.png" alt="Cart Image" />
